@@ -4,6 +4,12 @@ CHANGE LOG
 
 Changes up to 0.96
 
+   * fixed over-zealous movie security warning: no longer warns if
+     there weren't any commands defined
+
+   * surface_carve_cutoff, surface_carve_selection, surface_carve_state
+     settings, to enable sub-atomic culling of surfaces...
+
    * stick_transparency opengl rendering fixed
 
    * passive stereo GLUT support (extra-wide desktop) for Windows
